--- a/streamlit/app/.streamlit/config.toml
+++ b/streamlit/app/.streamlit/config.toml
@@ -6,7 +6,7 @@ textColor = "#1f2937"
 font = "sans serif"
 
 [server]
-enableCORS = false
+enableCORS = true
 enableXsrfProtection = true
 maxUploadSize = 200
 
