--- a/streamlit/app/requirements.txt
+++ b/streamlit/app/requirements.txt
@@ -11,4 +11,5 @@ isort==5.13.2
 flake8==7.0.0
 mypy==1.8.0
 types-requests==2.31.0.20240125
-types-python-dateutil==2.8.19.14 
+types-python-dateutil==2.8.19.14
+wordcloud==1.9.3 
